# AByteOfCV

./: .gitignore  README.md
data/: annotation.txt  annotation1.txt  changeDatasetFormatHelen.m  helen_bb.txt  helen_test_bb.txt  track_gt.xml
src/: face_landmark_detection_ex.cpp  illumination.h  inpaint_imp.cpp  inpaint_imp.h  quilt.cpp  quilt.h
src/HeadPosePnP/: HeadPosePnP.sln  README
src/HeadPosePnP/HeadPosePnP/: AffineTransform.cpp  AffineTransform.h  ESR_shape.cpp  ESR_shape.h  HeadPose.cpp  HeadPosePnP.vcxproj  HeadPosePnP.vcxproj.filters  OGL_OCV_common.h  common.h  util.h
src/LandmarkDetect/: LandmarkDetect.sln
src/LandmarkDetect/LandmarkDetect/: AffineTransform.h  HeadPose.h  LandmarkDetect.vcxproj  (+9 more)
src/cpp/: CMakeLists.txt  CMakeLists.txt.bak  README  epdfilter.cpp  illumination.cpp  illumtransform.cpp  inpaint.cpp  inpaint.h  main.cpp  makeup.cpp  photoAlgo.h  photoUtil.cpp  photoUtil.h  quilt.cpp  salancy.cpp  skindetector.cpp  test.h  todo.txt  tonemapping.cpp  util.h  utill.cpp
src/cpp/shape/: emdL1.hpp  hist_cost.hpp  precomp.hpp  shape.hpp  shape_distance.hpp  shape_transformer.hpp  tps_trans.cpp
src/lua/: 251.c  stack.c  test.lua
src/opengl_test/: opengl_test.sln
src/python/: faceCrop.py  facealign.py
src/util/: compute.cpp  detMatForAnton.m  dres2xml.m  face_landmark_detection_ex.cpp  helen.cpp  helen_bb.txt  main.m  main1.m  main2.m  myavi2frame.m  mydetect.m  myshowFrame.m  parseDetMat.m  parseDetections.m  showBox.m  temple.m  trackXml_v2.m  train_shape_predictor_ex.cpp  videoDetectXml.m  xmlTest.m
summary/: 2014.12.12.md
(+21 files in other folders)
